--- a/desafioAnNum/style.css
+++ b/desafioAnNum/style.css
@@ -1,7 +1,15 @@
+*{
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
 select{
     min-width: 80px;
 }
 
 #btn{
     margin: 30px 0px 0px 5px;
+}
+
+body{
+   text-align: center;
 }
